# autonomous-hdb-deepagents

./: .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  pyproject.toml  start.sh  tools.yaml
db/init/: 00_schema.sql  01_load_data.sql
db/init/data/: mrt_exits.csv  mrt_to_hdb_town.csv  sg_parks.csv  sg_schools.csv
notebook/: deepagents-custom-model.ipynb  deepagents-multi-agent.ipynb  deepagents-sub-agent.ipynb
notebook/data-ingestion/: hdb-existing-building.ipynb  hdb-property-info.ipynb  lta-mrt-exits.ipynb  moe-sg-schools.ipynb  npark-parks.ipynb  onemap-geocoding-cache.ipynb
src/autonomous_hdb_deepagents/agent/: cli.py  deep_agent.py  intent.py  llm.py  mrt.py  mrt_resolver.py  pipeline.py  resale.py  state.py  summary.py  tools.py
src/autonomous_hdb_deepagents/api/: api_server.py  api_server_launch.py
src/autonomous_hdb_deepagents/ui/: gradio_app.py
